drbd-9.0.25-2/drbd/.compat_test.4.18.20/have_nla_parse_deprecated.stderr
<command-line>:0:0: warning: "KBUILD_MODNAME" redefined
<command-line>:0:0: note: this is the location of the previous definition
/root/Code/All/drbd-9.0.25-2/drbd/drbd-kernel-compat/tests/have_nla_parse_deprecated.c: In function ‘dummy’:
/root/Code/All/drbd-9.0.25-2/drbd/drbd-kernel-compat/tests/have_nla_parse_deprecated.c:10:9: error: implicit declaration of function ‘nla_parse_deprecated’; did you mean ‘nla_parse_nested’? [-Werror=implicit-function-declaration]
  return nla_parse_deprecated(tb, maxtype, head, len, policy, extack);
         ^~~~~~~~~~~~~~~~~~~~
         nla_parse_nested
cc1: some warnings being treated as errors
